<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/light_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <RelativeLayout
                    android:id="@+id/rl_back"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_back"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_back"
                        android:tint="@color/light_black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewMedium"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/img_back"
                        android:text="@string/back"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_like"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:padding="@dimen/_3sdp"
                        android:layout_toStartOf="@+id/img_share"
                        android:src="@drawable/ic_like"
                        android:tint="@color/light_black" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_share"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_share"
                        android:tint="@color/light_black" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/ic_find" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewLight"
                        android:text="@string/save_your_other"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="@dimen/_20sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewMedium"
                        android:text="@string/numbers"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        style="@style/CustomTextViewMedium"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/first_number"
                        android:textColor="@color/light_black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_first_no"
                            style="@style/CustomEditText"
                            android:hint="@string/write_first_number"
                            android:inputType="numberDecimal"
                            android:maxLength="16" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_sim" />

                    </RelativeLayout>

                    <TextView
                        style="@style/CustomTextViewMedium"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/second_number"
                        android:textColor="@color/light_black" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_second_no"
                            style="@style/CustomEditText"
                            android:hint="@string/write_second_number"
                            android:inputType="numberDecimal"
                            android:maxLength="16" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_sim" />

                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        style="@style/CustomButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:text="@string/save"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_about"
                        style="@style/CustomTextViewLight"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="@string/about_this_app"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/colorGrayDark" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
