<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_post">

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/gray_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_profile"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_find"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_user_name"
                    style="@style/CustomTextViewMedium"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/image_profile"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_below="@+id/image_profile"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/white" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/gray_dark" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_post_text"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:gravity="start"
                android:maxLines="10"
                android:padding="@dimen/_10sdp"
                android:text="@string/text_about_us"
                android:textColor="@color/light_black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/close"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </RelativeLayout>

</layout>
